--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,8 +22,10 @@ jobs:
 
             - name: Install dependencies
               run: |
-                npm install
+                pwd
                 cd frontend
+                npm install
+                
 
             - name: Build the app
               run: npm run build
