--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,9 +5,8 @@ on:
       branches:
         - main
     push:
-      branches-ignore:
-        - main
-
+      branches:
+        - '*'
 
 jobs:
   build:
