--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,8 @@ jobs:
           run: |
             cd backend
             npm install
-        
+            npm install pm2
+
         - name: Start the backend
           run: |
             cd backend
