--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,7 @@ jobs:
           run: |
             cd backend
             npm install
-            npm install pm2
+            npm install -g pm2
 
         - name: Start the backend
           run: |
