--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.5.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "node-cron": "^3.0.3",
