--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.13.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
